[package]
name = "htmlgrep"
version = "0.2.2"
authors = ["Andreas Tolfsen <ato@sny.no>"]
license = "ISC"
description = "htmlgrep is a suite of tools for searching HTML documents"
repository = "https://git.sny.no/htmlgrep"
readme = "README"
documentation = "https://docs.rs/htmlgrep"
keywords = ["grep", "html", "search", "find"]
categories = ["command-line-utilities", "parsing", "text-processing"]
build = "doc/build.rs"

[dependencies]
kuchiki = "0.7"

[badges]
travis-ci = { repository = "andreastt/htmlgrep" }
