[package]
name = "htmlgrep"
version = "0.3.0"
authors = ["Andreas Tolfsen <ato@sny.no>"]
license = "ISC"
description = "htmlgrep is a suite of tools for searching HTML documents"
repository = "https://git.sny.no/htmlgrep"
documentation = "https://docs.rs/htmlgrep"
homepage = "https://git.sny.no/htmlgrep/about/"
keywords = ["grep", "html", "search", "find"]
categories = ["command-line-utilities", "parsing", "text-processing"]

[lib]
path = "lib.rs"

[[bin]]
name = "css"
path = "css.rs"

[dependencies]
kuchiki = "0.7"

[badges]
travis-ci = { repository = "andreastt/htmlgrep" }
